tests/invalid/import_from_call_undefined/main.py
from provider import nonexistent

x: int = nonexistent()
